# botree_chat_backend

./: .env.example  .gitignore  Botree-Chat-Architecture.docx  CODEBASE.md  CODEBASE_OVERVIEW.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  SETUP.md  TECH_JUSTIFICATION.md  TEST_PLAN.md  TEST_REPORT.md  alembic.ini  content.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-backend.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  config.py  deps.py  errors.py  logging.py  main.py
app/api/: auth.py  chat.py  health.py  threads.py  transcribe.py
app/auth/: jwt.py  passwords.py
app/cache/: __init__.py  embeddings.py  normalizer.py  results.py  semantic.py  templater.py
app/chat/: __init__.py  answerer.py  pipeline.py  rewriter.py  stream.py
app/db/: analytics.py  models.py  postgres.py
app/domain/: __init__.py  formatting.py  glossary.py  schema_catalog.py  sql_rules.py
app/llm/: __init__.py  anthropic_provider.py  base.py  bedrock_provider.py  cloudflare_provider.py  factory.py  prompts.py  usage.py  whisper.py
docker/: pgadmin-servers.json
scripts/: e2e_smoke.py  qtest.py  seed_users.py  token_report.py
tests/: conftest.py  test_analytics.py  test_answerer.py  test_auth.py  test_cache.py  test_chat_api.py  test_config.py  test_domain.py  test_export_pdf.py  test_health.py  test_llm_providers.py  test_llm_usage.py  test_models.py  test_pipeline.py  test_ratelimit.py  test_rbac_injector.py  test_sqlsafety.py  test_sweeper.py  test_threads.py  test_transcribe.py
(+17 files in other folders)
